--- a/templates/category.html
+++ b/templates/category.html
@@ -22,10 +22,10 @@
             <div class="col-lg-4 col-md-6 portfolio-item {{ wall.category.id }} wow fadeInUp" data-wow-delay="0.1s">
                 <div class="rounded overflow-hidden mt-5">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid w-100" style="height: 510px; object-fit: cover" src="{{ wall.image.url }}"
-                             alt=""/>
+                        <img class="img-fluid w-100" style="height: 510px; object-fit: cover" src="{{ wall.image1.url }}"
+                             alt="img"/>
                         <div class="portfolio-overlay">
-                            <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image.url }}"
+                            <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image2.url }}"
                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                             <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
                         </div>
@@ -42,7 +42,7 @@
                 <div class="rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height: 510px; object-fit: cover" src="{{ wall.image.url }}"
-                             alt=""/>
+                             alt="img"/>
                         <div class="portfolio-overlay">
                             <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image.url }}"
                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
@@ -82,7 +82,7 @@
                 <div class="rounded overflow-hidden mt-5">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height: 510px; object-fit: cover" src="{{ led.image.url }}"
-                             alt=""/>
+                             alt="img"/>
                         <div class="portfolio-overlay">
                             <a class="btn btn-square btn-outline-light mx-1" href="{{ led.image.url }}"
                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
@@ -101,7 +101,7 @@
                 <div class="rounded overflow-hidden">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid w-100" style="height: 510px; object-fit: cover" src="{{ led.image.url }}"
-                             alt=""/>
+                             alt="img"/>
                         <div class="portfolio-overlay">
                             <a class="btn btn-square btn-outline-light mx-1" href="{{ led.image.url }}"
                                data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
