--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -159,7 +159,7 @@
         <div style="height: 100vh" class="owl-carousel header-carousel position-relative">
             {% for carousel in carousels %}
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="{{ carousel.image.url }}" alt=""
+                <img class="img-fluid" src="{{ carousel.image.url }}" alt="img"
                     style="height: 100vh; width: 100%; object-fit: cover" />
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
                     style="background: rgba(53, 53, 53, 0.7)">
@@ -279,7 +279,7 @@
                     <div class="service-item">
                         <div class="overflow-hidden" style="height: 500px">
                             <img class="img-fluid" style="height: 100%;object-fit: cover;width: 100%"
-                                src="{{ service.photo.url }}" alt="">
+                                src="{{ service.photo.url }}" alt="img">
                         </div>
                         <div class="p-4 text-center border border-5 border-light border-top-0" style="height: 110px">
                             <h4 class="mb-3">{{ service.name }}</h4>
@@ -334,9 +334,9 @@
                     <div class="rounded overflow-hidden mt-5">
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid w-100" style="height: 550px; object-fit: cover"
-                                src="{{ wall.image.url }}" alt="" />
+                                src="{{ wall.image1.url }}" alt="img" />
                             <div class="portfolio-overlay">
-                                <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image.url }}"
+                                <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image2.url }}"
                                     data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
@@ -353,9 +353,9 @@
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid w-100" style="height: 550px; object-fit: cover"
-                                src="{{ wall.image.url }}" alt="" />
+                                src="{{ wall.image1.url }}" alt="img" />
                             <div class="portfolio-overlay">
-                                <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image.url }}"
+                                <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image2.url }}"
                                     data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                                 <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
                             </div>
@@ -395,7 +395,7 @@
                     <div class="rounded overflow-hidden mt-5">
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid w-100" style="height: 550px; object-fit: cover"
-                                src="{{ led.image.url }}" alt="" />
+                                src="{{ led.image.url }}" alt="img" />
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="{{ led.image.url }}"
                                     data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
@@ -414,7 +414,7 @@
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid w-100" style="height: 550px; object-fit: cover"
-                                src="{{ led.image.url }}" alt="" />
+                                src="{{ led.image.url }}" alt="img" />
                             <div class="portfolio-overlay">
                                 <a class="btn btn-square btn-outline-light mx-1" href="{{ led.image.url }}"
                                     data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
@@ -441,7 +441,7 @@
                 <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute img-fluid w-100 h-100" src="{% static 'img/quota.jpg' %}"
-                            style="object-fit: cover;" alt="" />
+                            style="object-fit: cover;" alt="img" />
                     </div>
                 </div>
                 <div class="col-lg-6 quote-text py-5 wow fadeIn" data-wow-delay="0.5s">
@@ -502,7 +502,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="overflow-hidden position-relative">
-                            <img class="img-fluid" src="{{ team.photo.url }}" alt="" />
+                            <img class="img-fluid" src="{{ team.photo.url }}" alt="img" />
                             <div class="team-social">
                                 <a class="btn btn-square" href="{{ team.telegram }}"><i class="fab fa-telegram"></i></a>
                                 <a class="btn btn-square" href="{{ team.wechat }}"><i class="fab fa-comment"></i></a>
