--- a/templates/wallpapers.html
+++ b/templates/wallpapers.html
@@ -26,9 +26,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item {{ wall.category.id }} wow fadeInUp" data-wow-delay="0.1s">
             <div class="rounded overflow-hidden mt-5">
               <div class="position-relative overflow-hidden">
-                <img class="img-fluid w-100" style="height: 550px; object-fit: cover" src="{{ wall.image.url }}" alt="" />
+                <img class="img-fluid w-100" style="height: 550px; object-fit: cover" src="{{ wall.image1.url }}" alt="img" />
                 <div class="portfolio-overlay">
-                  <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image.url }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                  <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image2.url }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                   <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
                 </div>
               </div>
@@ -43,9 +43,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item {{ wall.category.id }} wow fadeInUp" data-wow-delay="0.1s">
             <div class="rounded overflow-hidden">
               <div class="position-relative overflow-hidden">
-                <img class="img-fluid w-100" style="height: 550px; object-fit: cover" src="{{ wall.image.url }}" alt="" />
+                <img class="img-fluid w-100" style="height: 550px; object-fit: cover" src="{{ wall.image1.url }}" alt="img" />
                 <div class="portfolio-overlay">
-                  <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image.url }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                  <a class="btn btn-square btn-outline-light mx-1" href="{{ wall.image2.url }}" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                   <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
                 </div>
               </div>
