--- a/templates/container_orders.html
+++ b/templates/container_orders.html
@@ -10,34 +10,66 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/containers.css' %}" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap CSS for better button styling -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .highlight-yellow {
+            background-color: yellow;
+        }
+        .highlight-green {
+            background-color: lightgreen;
+        }
+        .table-hover tbody tr:hover {
+            background-color: #f5f5f5;
+        }
+        .symbol-yes {
+            color: red;
+            font-weight: bold;
+        }
+        .symbol-no {
+            color: green;
+            font-weight: bold;
+        }
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
     
     {% include '_navbar.html' %}
 <div class="container">
     <h1>Orders for Container: {{ container.number }}</h1>
-    <table>
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>#</th>
                 <th><i class="fas fa-user"></i> User Name</th>
                 <th><i class="fas fa-phone"></i> Phone Number</th>
                 <th><i class="fas fa-building"></i> Organization</th>
-                <th><i class="fas fa-shopping-cart"></i> Number of Orders</th>
+                <th><i class="fas fa-exclamation-circle"></i> Missing Purchase Date</th>
             </tr>
         </thead>
         <tbody>
-            {% for user in users %}
-            <tr onclick="location.href='{% url 'user_orders' user.id %}'" style="cursor: pointer;">
+            {% for user, has_missing_purchase_date in users_with_indicators %}
+            <tr onclick="location.href='{% url 'user_orders' user.id container.id %}'" style="cursor: pointer;">
                 <td>{{ forloop.counter }}</td>
                 <td>{{ user.name }}</td>
                 <td>{{ user.phone_number }}</td>
                 <td>{{ user.organization }}</td>
-                <td>{{ user.orders.count }}</td>
+                <td>
+                    {% if has_missing_purchase_date %}
+                        <span class="symbol-yes"><i class="fas fa-exclamation-circle"></i> No</span>
+                    {% else %}
+                        <span class="symbol-no"><i class="fas fa-check-circle"></i> Yes</span>
+                    {% endif %}
+                </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
+<!-- Bootstrap JS for better button styling -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
