--- a/templates/requested_orders.html
+++ b/templates/requested_orders.html
@@ -30,7 +30,7 @@
 
     {% include '_navbar.html' %}
     <div class="container">
-        <h1>Requested Orders</h1>
+        <h1><b>Requested Orders</b></h1>
         <table class="table table-hover">
             <thead>
                 <tr>
