--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -9,9 +9,8 @@
     <title>{% block title %}Xan Decor{% endblock %}</title>
     <link rel="icon" href="{% static 'brands/bfavicon.ico' %}" type="image/x-icon" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
-
+    <meta content="Xan Decor is a company that provides services in the field of wallpapers and leds." name="keywords" />
+    <meta content="Xan Decor is a company that provides services in the field of wallpapers and leds." name="description" />
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
