--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,32 +1,33 @@
-
 <footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>About Us</h5>
-                <p>We are a company dedicated to providing the best container management solutions.</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="{% url 'contact' %}">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Contact Us</h5>
-                <ul class="list-unstyled">
-                    <li><i class="fas fa-envelope"></i> nodirbyte@gmail.com</li>
-                    <li><i class="fas fa-phone"></i> +998 99 785 48 02</li>
-                </ul>
-            </div>
-        </div>
-        <div class="text-center mt-3">
-            <p>&copy; 2024 NodirByte. All Rights Reserved.</p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5>About Us</h5>
+        <p>We are a company dedicated to providing the best container management solutions.</p>
+      </div>
+      <div class="col-md-4">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'contact' %}">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5>Contact Us</h5>
+        <ul class="list-unstyled">
+          <li><i class="fas fa-envelope"></i> nodirbyte@gmail.com</li>
+          <li><i class="fas fa-phone"></i> +998 99 785 48 02</li>
+        </ul>
+      </div>
     </div>
+    <div class="text-center mt-3">
+      <p>&copy; 2024 NodirByte. All Rights Reserved.</p>
+    </div>
+  </div>
 </footer>
 
 <!-- External CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
