add inheritence between 'main.html' & 'container_detail.html', 'asked_users.html'

--- a/templates/general/containers.html
+++ b/templates/general/containers.html
@@ -143,5 +143,5 @@
 
 <!-- Script -->
 {% block script %}
-<script src="{% static 'js/container.js' %}" />
+<script src="{% static 'js/containers.js' %}"></script>
 {% endblock %}
