--- a/templates/general/main.html
+++ b/templates/general/main.html
@@ -17,6 +17,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <!-- Internal CSS -->
     <link rel="stylesheet" href="{% static 'css/containers.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   </head>
   <body>
     <!-- Include Navbar -->
