--- a/templates/general/main.html
+++ b/templates/general/main.html
@@ -18,10 +18,12 @@
     <!-- Internal CSS -->
     <link rel="stylesheet" href="{% static 'css/containers.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    {% block style %}{% endblock %}
   </head>
   <body>
     <!-- Include Navbar -->
     {% include '_navbar.html' %}
+
     <!-- Content -->
     {% block content %}{% endblock %}
 
