fix path of template on views

--- a/templates/general/user_orders.html
+++ b/templates/general/user_orders.html
@@ -10,7 +10,7 @@
 
 <!-- Content -->
 {% block content %}
-<div class="container">
+<div>
   <h1>Orders for User: {{ user.name }}</h1>
   <table class="table table-hover">
     <thead>
