--- a/templates/general/product_reviews.html
+++ b/templates/general/product_reviews.html
@@ -2,15 +2,35 @@
 
 <!-- Content -->
 {% block content %}
-<h1><i class="fas fa-star"></i> Product Reviews</h1>
+<div class="container-fluid">
+  <div class="row">
+    {% include "_sidebar.html" %}
 
-<ul>
-  {% for product in object_list %}
-  <li>
-    <a href="{% url 'product_reviews_detail' product.pk %}">{{ product.name }}</a>
-  </li>
-  {% empty %}
-  <li>No products found.</li>
-  {% endfor %}
-</ul>
+    <!-- Main content -->
+    <main class="col offset-1 col-md-11 ms-sm-auto col-lg-11 px-md-4">
+      <h1><i class="fas fa-star"></i> Product Reviews</h1>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for product in object_list %}
+          <tr>
+            <th scope="row">1</th>
+            <td><a href="{% url 'product_reviews_detail' product.pk %}">{{ product.name }}</a></td>
+          </tr>
+          {% empty %}
+          <tr>
+            <th>No products found.</th>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </main>
+  </div>
+</div>
 {% endblock %}
